duniverse/cstruct-sexp.5.1.1/ppx_test/errors/cenum_invalid_type.ml
[%%cenum
  type t = A of int
  [@@uint8_t]
]
